<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
            <EditText
                android:id="@+id/editTextFindPokemonNameOrId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_text_pokemon_name_or_id"/>
            <Button
                android:id="@+id/button_find_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_find_pokemon_text"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/foundPokemonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imageViewFoundPokemonImage"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_view_found_pokemon_image_description"/>
            <TextView
                android:id="@+id/textViewFoundPokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:text="@string/text_view_found_pokemon_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_catch_pokemon_description"
                android:layout_marginTop="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextCustomPokemonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/edit_text_custom_pokemon_name"/>
                <Button
                    android:id="@+id/button_add_pokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catch_pokemon_button_text"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
